# cin-dataviz

./: .gitignore  .pre-commit-hooks.yaml  README.md  app.py  glifo.ipynb  output.html  pyproject.toml  teste.html
data/01_raw/: avaliacao.json  fatty_acids_serum_Train.csv  fatty_acids_spermatoza_Train.csv  participant_related_data_Train.csv  semen_analysis_data_Train.csv  sex_hormones_Train.csv  teste.csv
data/02_intermediate/: data_horm_concat.csv  data_horm_concat.parquet  data_horm_concat_corr.csv  data_horm_concat_corr.parquet  tracker.csv
data/03_primary/tracker_data/: 11.csv  11.parquet  12.csv  12.parquet  13.csv  13.parquet  14.csv  14.parquet  15.csv  15.parquet  19.csv  19.parquet  21.csv  21.parquet  22.csv  22.parquet  23.csv  23.parquet  24.csv  24.parquet  29.csv  29.parquet  30.csv  30.parquet  35.csv  35.parquet  36.csv  36.parquet  38.csv  38.parquet  47.csv  47.parquet  52.csv  52.parquet  54.csv  54.parquet  60.csv  60.parquet  82.csv  82.parquet
datasets/data/train/: labels.cache
datasets/data/valid/: labels.cache
notebooks/: 00_00_train_sperm.ipynb  00_01_sperm_tracking.ipynb  00_train_sperm.ipynb  01_00_pre_process_horm.ipynb  01_01_pre_process_track.ipynb  01_02_pre_process_join.ipynb  01_03_pre_process_insights.ipynb  01_pre_process.ipynb  03_viz_sperm_track.ipynb  data.yaml  model.py  nb_utils.py  sperm.ipynb
runs/detect/train/: args.yaml  events.out.tfevents.1728068867.Aninha.23228.0  results.csv
src/: detector.py
templates/: glyph.html
utils/: __init__.py  reader.py
visualization/: data.json  glyph.html  glyph.js
(+22 files in other folders)
