[tool.poetry]
name = "template-hooks"
version = "0.1.0"
description = "Repository template with hooks using MIT LICENSE."
authors = ["Manuel Ferreira Junior <ferreira.jr.ufpb@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
python-dotenv = "^1.0.0"
pre-commit = "^3.3.3"
autopep8 = "^2.0.2"
PyYAML = "^6.0.1"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
matplotlib = "^3.8.4"
Jinja2 = "^3.1.3"
ultralytics = "^8.2.103"
supervision = "^0.23.0"
plotly = "^5.24.1"
nbformat = "^5.10.4"
ipywidgets = "^8.1.5"
hiplot = "^0.1.33"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']
exclude = '''
    /(\.direnv|\.eggs|\.git|\.hg|\.mypy_cache|\.nox|\.tox|\.venv|\.venv3|_build|buck-out|build|dist)/
'''

[tool.flake8]
max-line-length = 120
